--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header">
         <div class="header-div container">
             <a href="" class="header-logo">SIMPLY CHOCOLATE <img src="./images/logo.svg" alt="logotype" class="logo-svg"></a>
-            <button class="header-menu-btn" onclick="toggleMenu()">
+            <button class="header-menu-btn">
                 <svg class="header-svg" width="28" height="38">
                     <use href="./images/sprite.svg#menu"></use>
                 </svg>
@@ -256,8 +256,8 @@
         </div>
     </footer>
 
-    <div class="header-menu" id="myDiv">
-            <button class="close-btn" onclick="closeMenu()">
+    <div class="header-menu" id="burger-menu">
+            <button class="close-btn">
                 <svg class="close-btn-svg" width="28" height="28">
                     <use href="./images/sprite.svg#close"></use>
                 </svg>
